--- a/slip-0044.md
+++ b/slip-0044.md
@@ -667,14 +667,14 @@ index | hexa       | symbol | coin
 636   | 0x8000027c |        |
 637   | 0x8000027d |        |
 638   | 0x8000027e |        |
-639   | 0x8000027f |        |
-640   | 0x80000280 |        |
-641   | 0x80000281 |        |
-642   | 0x80000282 |        |
-643   | 0x80000283 |        |
-644   | 0x80000284 |        |
-645   | 0x80000285 |        |
-646   | 0x80000286 |        |
+639   | 0x8000027f | AB     | [ArgotBit](http://argot.me/)
+640   | 0x80000280 |        | [ArgotBit TestNet](http://argot.me/)
+641   | 0x80000281 | ABUSD  |
+642   | 0x80000282 | ABCNY  |
+643   | 0x80000283 | ABEUR  |
+644   | 0x80000284 | ABPHP  |
+645   | 0x80000285 | ABKRW  |
+646   | 0x80000286 | ABJPY  |
 647   | 0x80000287 |        |
 648   | 0x80000288 |        |
 649   | 0x80000289 |        |
